docs(users): create docs for /users route
